selfhost/test/typechecker/match/error_destructuring_constant_variant.abra
enum Color { Red, Green, Blue }

val c = Color.Green
val x = match c {
  Color.Red(r) => 1
  _ => 4
}